# password_manager

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: crypto.rs  db.rs  main.rs
src/cli/: handlers.rs  input.rs  mod.rs
src/handlers/: password_handler.rs
src/models/: password.rs
src/repository/: mod.rs  password_repo.rs
src/routes/: mod.rs
static/: index.html  script.js
